# adventofcode2024

./: README.md  flake.nix
src/: CMakeLists.txt
src/day01/: CMakeLists.txt  input.cc  main.cc  mod.cc  part_one.cc  part_two.cc
src/day02/: CMakeLists.txt  input.cc  main.cc  part_one.cc  part_two.cc
src/day03/: CMakeLists.txt  input.cc  main.cc  part_one.cc  part_two.cc
src/day04/: CMakeLists.txt  input.cc  main.cc  part_one.cc  part_two.cc
src/day05/: CMakeLists.txt  input.cc  main.cc  part_one.cc  part_two.cc
src/day06/: CMakeLists.txt  input.cc  main.cc  part_one.cc  part_two.cc
src/day07/: CMakeLists.txt  input.cc  main.cc  part_one.cc  part_two.cc
src/day08/: CMakeLists.txt  input.cc  main.cc  part_one.cc  part_two.cc
src/day10/: CMakeLists.txt  input.cc  main.cc  part_one.cc  part_two.cc
src/day11/: CMakeLists.txt  input.cc  main.cc  part_one.cc
src/day12/: CMakeLists.txt  input.cc  main.cc  part_one.cc  part_two.cc
src/day13/: CMakeLists.txt  input.cc  main.cc  part_one.cc
src/day14/: CMakeLists.txt  input.cc  main.cc  part_one.cc  part_two.cc
src/day16/: CMakeLists.txt  input.cc  main.cc  part_one.cc  part_two.cc
src/day17/: CMakeLists.txt  input.cc  main.cc  part_one.cc
src/day18/: CMakeLists.txt  input.cc  main.cc  part_one.cc  part_two.cc
src/day19/: CMakeLists.txt  input.cc  main.cc  part_one.cc  part_two.cc
src/day20/: CMakeLists.txt  input.cc  main.cc  part_one.cc  part_two.cc
src/day21/: CMakeLists.txt  input.cc  main.cc  part_one.cc
src/day22/: CMakeLists.txt  input.cc  main.cc  part_one.cc  part_two.cc
src/day23/: CMakeLists.txt  input.cc  main.cc  part_one.cc  part_two.cc
src/day25/: CMakeLists.txt  input.cc  main.cc  part_one.cc  part_two.cc
